Arduino with Material design updates: * Added button to toggle the toolbox visibility ON and OFF * Added a function to display a pop-up card to show alerts and other messages within the page (to avoid calls to alert and confirm) * Increase minimum Blockly workspace height * Added function calls (with a tooltip indicating unimplemented feature) to all clickable elements in the design * Added a button in the XML code text area to be able to load the XML into blocks for the workspace (js unimplemented) * Added drop down menu in the Navigation bar to select examples to load (js unimplemented)

--- a/apps/arduino_material/arduino_material.css
+++ b/apps/arduino_material/arduino_material.css
@@ -2,7 +2,9 @@ body {
   background-color: #eeeeee;
 }
 
-/* Fix the navigation bar to stay on screen at larger resolutions */
+/********************/
+/*  Navigation bar  */
+/********************/
 .nav-fixed {
   border-radius: 0;
   position: inherit;
@@ -22,12 +24,17 @@ body {
   }
 }
 
+
+/************************************/
+/*  Blocks, arduino, and xml areas  */
+/************************************/
 .content {
   margin: 0;
   padding: 0;
   width: 100%;
   background-color: #ffffff;
 }
+
 #blocks_panel {
   padding: 0px;
   position: relative!important;
@@ -35,16 +42,18 @@ body {
   -moz-border-radius: 4px !important;
   border-radius: 4px !important;
 }
+
 #content_blocks {
   margin: 0;
   padding: 0;
-  min-height: 500px;
+  min-height: 560px;
   background: none; 
   height: -moz-calc(100hv - 100px);     /* Firefox  */
   height: -webkit-calc(100hv - 100px);  /* WebKit   */
   height: -o-calc(100hv - 100px);       /* Opera    */
   height: calc(100hv - 100px);          /* Standard */
 }
+
 #content_xml {
   resize: none;
   outline: none;
@@ -52,12 +61,15 @@ body {
   font-family: monospace;
   overflow: scroll;
   font-style: 0.2em !important;
-  min-height: 410px;
+  min-height: 470px;
   height: -moz-calc(100hv - 100px);     /* Firefox  */
   height: -webkit-calc(100hv - 100px);  /* WebKit   */
   height: -o-calc(100hv - 100px);       /* Opera    */
   height: calc(100hv - 100px);          /* Standard */
 }
+
+/* The materialize framework changes height of the div to show or hide */
+/* the collapsible elements. */
 #content_arduino {
   resize: none;
   outline: none;
@@ -65,24 +77,71 @@ body {
   font-family: monospace;
   overflow: scroll;
   font-style: 0.2em !important;
-  min-height: 410px;
+  min-height: 470px;
   height: -moz-calc(100hv - 100px);     /* Firefox  */
   height: -webkit-calc(100hv - 100px);  /* WebKit   */
   height: -o-calc(100hv - 100px);       /* Opera    */
   height: calc(100hv - 100px);          /* Standard */
 }
 
+/*************/
+/*  Buttons  */
+/*************/
 #button_run {
   position: absolute;
   right: 25px;
   top: -20px;
 }
+
 #button_load_xml {
   position: absolute;
   right: 30px;
   bottom: 20px;
+  display: none;
 }
 
+.button_toggle_toolbox_on {
+  position: absolute;
+  margin: 0 !important;
+  padding: 0px !important;
+  left: 12px;
+  top: 9px;
+  text-align: center;
+  z-index: 5;
+  border-color: #e0e0e0 !important;
+  border-width: 1px !important;
+  -webkit-border-radius: 4px 4px 4px 4px !important;
+  -moz-border-radius: 4px 4px 4px 4px !important;
+  border-radius: 4px 4px 4px 4px !important;
+  background: rgba(13, 71, 161, 0.1) !important;  /* Blue 900 */
+  -webkit-box-shadow: 0 2px 5px 0 rgba(0, 0, 0, 0.16), 0 2px 10px 0 rgba(0, 0, 0, 0.12);
+  -moz-box-shadow: 0 2px 5px 0 rgba(0, 0, 0, 0.16), 0 2px 10px 0 rgba(0, 0, 0, 0.12);
+  box-shadow: 0 2px 5px 0 rgba(0, 0, 0, 0.16), 0 2px 10px 0 rgba(0, 0, 0, 0.12); 
+}
+.button_toggle_toolbox_off {
+  position: absolute;
+  margin: 0 !important;
+  padding: 0px !important;
+  left: 12px;
+  top: 9px;
+  text-align: center;
+  z-index: 5;
+}
+
+.collapsible_logo{
+  width: 3rem;
+  font-size: 1.6rem;
+  line-height: 3rem;
+  display: block;
+  float: left;
+  text-align: center;
+  margin-right: 1rem; 
+}
+
+/* Additional CSS to reduce size of Materialize Modal*/
+.modal_small {
+  max-width: 30% !important;
+}
 
 /*****************************/
 /*  Overwriting Blockly CSS  */
@@ -112,7 +171,7 @@ body {
   border-radius: 4px 0px 0px 4px !important;
   border: none !important;
   margin: 0px !important;
-  padding: 0px !important;
+  padding: 0px 0px 0px 0px !important;
   background: rgba(13, 71, 161, 0.1) !important;  /* Blue 900 */
   -webkit-box-shadow: 0 2px 5px 0 rgba(0, 0, 0, 0.16), 0 2px 10px 0 rgba(0, 0, 0, 0.12);
   -moz-box-shadow: 0 2px 5px 0 rgba(0, 0, 0, 0.16), 0 2px 10px 0 rgba(0, 0, 0, 0.12);
@@ -121,7 +180,7 @@ body {
 .blocklyTreeRoot {
   background: none !important;
   border: none !important;
-  margin: 0px 0px !important;
+  margin: 33px 0px 0px 0px !important;
   padding: 5px 1px !important;
   /*position: relative;
   top: 50%;
@@ -131,7 +190,7 @@ body {
   background: none !important;
   border: none !important;
   margin: 0px 0px !important;
-  padding: 8px 15px 8px 0px !important;
+  padding: 8px 16px 8px 0px !important;
   box-sizing: content-box !important;
   /* line-height: 0.5rem !important;
   vertical-align: middle !important;*/
@@ -148,6 +207,7 @@ body {
   padding: 0px !important;
   margin: 0px !important;
 }
+
 /* Toolbox second column with blocks*/
 .blocklyFlyoutBackground {
   fill: #0d47a1 !important;  /* Blue 900 */
@@ -176,6 +236,11 @@ body {
   .container {
     width: 90% !important;
   }
+}
+
+/* Need larger icons in buttons */
+.mdi-action-visibility {
+  font-size: 2rem !important;
 }
 
 /* Button needs to be at a higher z index than */
